k8s/apps/mysql/dns.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql-dns
  namespace: mysql
spec:
  type: ExternalName
  externalName: mysql.mysql.svc.cluster.local
  ports:
  - port: 3306
