k8s/apps/mysql/ingress-route-tcp.yaml
# Ingress
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mysql-ingress
  namespace: mysql
spec:
  entryPoints:
    - mysql
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mysql
          port: 3306
          terminationDelay: -1
