k8s/apps/mysql/manifest.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql-dns
  namespace: mysql
spec:
  type: ExternalName
  externalName: mysql.mysql.svc.cluster.local
  ports:
  - port: 3306

---
# Ingress
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mysql-ingress
  namespace: mysql
spec:
  entryPoints:
    - mysql
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mysql
          port: 3306
          terminationDelay: -1
